--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,9 +3,22 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends:
-    R (>= 3.1.2)
-License: What license is it under?
+Depends: R (>= 3.1.2)
+Imports:
+  magrittr,
+  abjutils,
+  dplyr,
+  esaj,
+  httr,
+  jsonlite,
+  rstudioapi,
+  rvest,
+  stringi,
+  stringr,
+  tibble,
+  tidyr,
+  xml2
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
